all error fixed

--- a/mydjapp/templates/master_template.html
+++ b/mydjapp/templates/master_template.html
@@ -59,14 +59,7 @@
                 <a href="/" class="nav-item nav-link active">Home</a>
                 <a href="/about/" class="nav-item nav-link">About</a>
                 <a href="/contact/" class="nav-item nav-link">Contact</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Service</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="" class="dropdown-item">Our Team</a>
-                        <a href="" class="dropdown-item">Testimonial</a>
-                        <a href="" class="dropdown-item">Our Clients</a>
-                    </div>
-                </div>
+                <a href="/service/" class="nav-item nav-link">Service</a>
                 <a href="/register/" class="nav-item nav-link">Register</a>
             </div>
             <a href="/login/" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Login<i class="fa fa-arrow-right ms-3"></i></a>
@@ -88,7 +81,7 @@
                             <div class="col-sm-10 col-lg-8">
                                 <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Platform</h5>
                                 <h1 class="display-3 text-white animated slideInDown">The Best Online Auction Platform</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod elitr.</p>
+                                <p class="fs-5 text-white mb-4 pb-2">The rapid growth of e-auctions has led to an e-transformation in global retail infrastructure. Thanks to a growing internet and higher incomes and a more savvy population, despite many obstacles. </p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                                 <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
                             </div>
@@ -104,7 +97,7 @@
                             <div class="col-sm-10 col-lg-8">
                                     <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Platform</h5>
                                     <h1 class="display-3 text-white animated slideInDown">The Best Online Auction Platform</h1>
-                                    <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod elitr.</p>
+                                    <p class="fs-5 text-white mb-4 pb-2">The rapid growth of e-auctions has led to an e-transformation in global retail infrastructure. Thanks to a growing internet and higher incomes and a more savvy population, despite many obstacles. </p>
                                     <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                                     <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
                             </div>
