--- a/mydjapp/templates/contact.html
+++ b/mydjapp/templates/contact.html
@@ -6,7 +6,16 @@
     <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
         <h6 class="section-title bg-white text-start text-primary pe-3">Contact Page</h6>
         <h1 class="mb-4">Welcome to eAuction</h1>
-        <p style="text-align:justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, cumque vitae. Aspernatur, eveniet architecto. In alias iusto, ex ipsa, ipsum ullam quidem mollitia, neque asperiores voluptatem pariatur voluptate deleniti ut. Tempore facere magnam modi iste, aspernatur temporibus saepe laborum pariatur dolorem nemo quibusdam maiores quaerat delectus aperiam, alias ut molestias enim hic adipisci! Dicta ut animi est exercitationem enim impedit repudiandae rem commodi rerum ullam aut, esse ad, cumque, atque aliquid. Minima vel recusandae animi veritatis debitis possimus est consequatur, commodi asperiores iusto quisquam sequi dolore neque earum provident ducimus iure distinctio maxime eveniet! Repellat esse delectus rem quam cupiditate quae labore blanditiis fugiat nihil, quasi quo deserunt. Cum impedit ullam ad ex quibusdam fugit consectetur minus quia veritatis, nihil illum porro necessitatibus quis sequi illo? At sint accusamus facere facilis ratione rerum harum illo in porro libero sed quo cupiditate quas nisi minima, beatae aut molestiae illum tenetur sequi provident! Iure obcaecati hic, beatae officia veritatis quibusdam, officiis odit placeat a nobis, eum molestiae repudiandae incidunt necessitatibus sapiente inventore. Sit similique assumenda labore eius, quae deserunt eligendi officia numquam. Voluptates ad voluptas perspiciatis! Veniam ducimus rem nihil temporibus, similique omnis accusantium quos hic praesentium earum reiciendis esse tempora enim!</p>
+        <h1>Contact Us</h1>
+        <div class="contact-info">
+            <h2>Our Address</h2>
+            <p>A-17/6,Vindhya colony<br>Umaria, Madhya Pradesh, 484555</p>
+            <h2>Email</h2>
+            <p><a href="mailto:harsh262000.hm@gmail.com">harsh262000.hm@gmail.com</a></p>
+            <h2>Phone</h2>
+            <p><a href="tel:+91 6263255472">+91 6263255472</a></p>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.4366937580558!2d80.9190827589387!3d23.33618842886743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3986ce6a9da9e5ab%3A0xf126f3f3d07cc427!2sVindhya%20Colony%2C%20Deori%20Amhai%2C%20Madhya%20Pradesh%20484555!5e0!3m2!1sen!2sin!4v1716584478261!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </div>
 {% endblock content %}
